webook/k8s/webook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
      - name: webook-mysql
        image: mysql:8.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: /val/lib/mysql
            name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-pvc
