webook/k8s/webook-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-redis
spec:
  selector:
    matchLabels:
      app: webook-redis
  template:
    metadata:
      labels:
        app: webook-redis
    spec:
      containers:
      - name: webook-redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
