webook/k8s/webook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
  - protocol: TCP
    port: 3308
    targetPort: 3306
  type: LoadBalancer
