webook/k8s/webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-record
spec:
  selector:
    app: webook-record
  ports:
    - protocol: TCP
      port: 99
      targetPort: 8080

  type: LoadBalancer
